reward function completed

--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
 CricketEnv:
- - riguarda il constructor, particularly hte action_space and observation_space
+ - riguarda il constructor, particularly hte action_space and observation_space --> in reset fai previous_action
  - implement the step
  - give a look to the method reset()
  - implmement (copia) render
