--- a/TODO
+++ b/TODO
@@ -15,47 +15,9 @@ Neural Networks:
 
 
 
- tensor([[ 0.0000,  0.0000,  0.5000,  0.0000, -0.0000,  0.0000,  0.0000,  0.0000,
-          0.0000,  0.0000,  0.0000,  0.0000,  2.5580, -0.2983,  0.4354,  2.6878,
-          0.3689,  0.3752,  2.5084,  2.5029, -0.1806, -2.6925, -1.3508, -1.3173,
-         -0.1104, -0.4398, -1.9858, -1.8651,  2.3336, -0.8553, -1.6961,  0.8093,
-          0.7123, -2.8393,  1.1209,  2.2082,  0.0000,  0.0000,  0.0000,  0.0000,
-          0.0000,  0.0000,  0.0000,  0.0000,  0.0000]], device='cuda:0')
-
-tensor([[[[[[ 15.]]],
-
-
-          [[[  0.]]],
-
-
-          [[[ 15.]]]],
-
-
-
-         [[[[ 15.]]],
-
-
-          [[[  0.]]],
-
-
-          [[[-15.]]]],
-
-
-
-         [[[[-15.]]],
-
-
-          [[[  0.]]],
-
-
-          [[[-15.]]]],
-
-
-
-         [[[[-15.]]],
-
-
-          [[[  0.]]],
-
-
-          [[[ 15.]]]]]], device='cuda:0')
+Traceback (most recent call last):
+  File "/home/andrea/Desktop/project/gym-cricket-robot/src/main.py", line 56, in <module>
+    ddpg.update(batch_size)
+  File "/home/andrea/Desktop/project/gym-cricket-robot/src/DDPG.py", line 68, in update
+    next_state_batch = torch.FloatTensor(next_state_batch).to(self.device)
+ValueError: expected sequence of length 3 at dim 2 (got 16)
